--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "homepage": "https://github.com/HanSaloZu/41-ISiP-V-vk-bot#readme",
   "dependencies": {
     "config": "^3.3.9"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1"
   }
 }
