--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/HanSaloZu/41-ISiP-V-vk-bot#readme",
   "dependencies": {
-    "config": "^3.3.9"
+    "config": "^3.3.9",
+    "vk-io": "^4.8.3"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
