--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@vk-io/hear": "^1.1.1",
     "config": "^3.3.9",
+    "node-cron": "^3.0.2",
     "vk-io": "^4.8.3"
   },
   "devDependencies": {
