--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "config": "^3.3.9",
     "node-cron": "^3.0.2",
     "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6",
     "vk-io": "^4.8.3"
   },
   "devDependencies": {
