--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-cron": "^3.0.2",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
-    "vk-io": "^4.8.3"
+    "vk-io": "^4.8.3",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
