--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
     "vk-io": "^4.8.3",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
