--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development node --experimental-specifier-resolution=node bot.js",
+    "prod": "NODE_ENV=production node --experimental-specifier-resolution=node bot.js"
   },
   "type": "module",
   "repository": {
